--- a/TrackingCetol/app/src/main/res/layout/custompopup.xml
+++ b/TrackingCetol/app/src/main/res/layout/custompopup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.C.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NAMA PEMESAN  :"
+            android:text="NAMA PEMESAN    :"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             android:textStyle="bold"
@@ -116,4 +116,4 @@
 
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</android.C.v7.widget.CardView>
