--- a/TrackingCetol/app/src/main/res/layout/fragment_home.xml
+++ b/TrackingCetol/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         app:cardElevation="6dp"
         app:cardCornerRadius="12dp"
-        android:layout_height="190dp"
+        android:layout_height="290dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp">
@@ -19,22 +19,31 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
+            android:background="#4152B8"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="center">
+                android:layout_gravity="center_horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/truk"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/truk"/>
 
                 <TextView
                     android:id="@+id/tv_kode"
+                    android:layout_below="@id/truk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textAlignment="center"
-                    android:text="         Kode"
+                    android:text="Masukkan Kode Pesanan"
                     android:textColor="#000"
                     android:textSize="30dp"
                     android:textStyle="bold" />
@@ -44,6 +53,7 @@
                     android:layout_below="@+id/tv_kode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:inputType="text"
                     android:gravity="center"
                     android:hint="Masukkan disini"
@@ -58,9 +68,11 @@
                     android:layout_below="@id/et_kode"
                     android:layout_centerHorizontal="true"
                     android:text="CEK"
+                    android:textColor="#fff"
                     android:textAlignment="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button"/>
             </RelativeLayout>
 
 
