--- a/TrackingCetol/app/src/main/res/layout/custompopup.xml
+++ b/TrackingCetol/app/src/main/res/layout/custompopup.xml
@@ -49,7 +49,7 @@
             android:layout_below="@id/nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PESANAN :"
+            android:text="TOTAL HARGA :"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
