--- a/TrackingCetol/app/src/main/res/layout/activity_main.xml
+++ b/TrackingCetol/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradasi"
+    android:background="#8FC1F3"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
