--- a/TrackingCetol/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/TrackingCetol/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,13 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home" />
+        android:title="MENU UTAMA" />
+
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="History" />
+        android:title="LIST BARANG" />
 
 
 
