--- a/TrackingCetol/app/src/main/res/layout/activity_detail_list_harga.xml
+++ b/TrackingCetol/app/src/main/res/layout/activity_detail_list_harga.xml
@@ -21,12 +21,10 @@
                 android:id="@+id/gambar"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_below="@+id/tvNama"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:background="@color/colorPrimary" />
+                android:layout_gravity="center" />
         </LinearLayout>
 
         <LinearLayout
